# backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  main.py  models.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  health.py  items.py
app/repositories/: __init__.py  products.py
tests/: test_app.py  test_mapping.py
